[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/placeholderlogo.png" type="Texture" id=1]
[ext_resource path="res://Scenes/EventScreen.gd" type="Script" id=2]
[ext_resource path="res://Events/StocksEventsResource.tres" type="Resource" id=3]
[ext_resource path="res://Scenes/MainFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Art/closeappbtnpressed.png" type="Texture" id=5]
[ext_resource path="res://Art/closeappbtn.png" type="Texture" id=6]
[ext_resource path="res://Art/closeappbtnhover.png" type="Texture" id=7]

[node name="EventScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -532.0
margin_bottom = -321.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
event_resource = ExtResource( 3 )

[node name="Panel" type="ColorRect" parent="."]
margin_right = 122.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompanyLabel" type="Label" parent="Panel"]
margin_left = 39.0
margin_top = 3.0
margin_right = 142.0
margin_bottom = 13.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Apppppppppppppppp"
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventLabel" type="Label" parent="Panel"]
margin_left = 39.0
margin_top = 12.0
margin_right = 185.0
margin_bottom = 66.0
rect_scale = Vector2( 0.565, 0.593 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "apple has just shit their pants live on television. The public is very happy about thisfdsfdsfdsfdsfdsfdsfdsfdsfdsfdsfdsfsdfdsfdsfsd"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Exit" to="." method="_close_noti"]
